<resources>
    <string name="app_name">XML-Parsing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vista_individual">vista_individual</string>
    <string name="usuario">usuario</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="apellidop">Apellido Paterno</string>
    <string name="apellidom">ApellidoMaerno</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
</resources>
