<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.leonet.xml_parsing.vista_individual">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_idusuario"
        android:text="@string/id"
        android:textColor="#ab5634"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_usuario"
        android:text="@string/usuario"
        android:textColor="#af6745"
        android:textStyle="italic"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_password"
        android:text="@string/password"
        android:textColor="#af6745"
        android:textStyle="italic"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nombre"
        android:text="@string/nombre"
        android:textColor="#af6745"
        android:textStyle="normal"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_apellidop"
        android:text="@string/apellidop"
        android:textColor="#af6745"
        android:textStyle="normal"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_apellidom"
        android:text="@string/apellidom"
        android:textColor="#af6745"
        android:textStyle="normal"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_email"
        android:text="@string/email"
        android:textColor="#af6745"
        android:textStyle="normal"
        android:paddingBottom="3dp"
        android:paddingLeft="12dp"
        />
</LinearLayout>
